- Keine relevanten Ändeurngen

--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -123,7 +123,7 @@
 <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="../../node_modules/designmodo-flat-ui/dist/js/flat-ui.min.js"></script>
-<script src="../bower_components/angular-messages/angular-messages.min.js"></script> <!-- Needed for ngFabForm -->
+<script src="../bower_components/angular-messages/angular-messages.min.js"></script> <!-- Required for ngFabForm -->
 <script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script> <!-- Angular extension for easier form handling -->
 <script src="./viewdocent.js"></script> <!-- Angular module code -->
 
