Feature: Datetimepicker - eonasdan-bootstrap-datetimepicker integriert

--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Loading Bootstrap -->
-    <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" media="screen">
 
-    <!-- Loading additional Style-Definitions -->
+    <!-- Loading bootstrap datetimepicker styles -->
+    <link rel="stylesheet" href="../../node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
+
+    <!-- Loading additional styles -->
     <link rel="stylesheet" href="viewdocent.css">
 
 	<!-- Loading Font-Awesome -->
-    <link href="../../node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css" media="screen">
 </head>
 <body>
 <!-- Navbar -->
@@ -119,8 +122,10 @@
     <ng-include src="'../templates/form_meetingedit.html'"></ng-include>
 </div>
 
-<script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="../../node_modules/jquery/dist/jquery.min.js"></script> <!-- Required for nearly every addon -->
+<script src="../../node_modules/moment/min/moment-with-locales.min.js"></script> <!-- Required for bootstrap datetimepicker -->
 <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="../bower_components/angular-messages/angular-messages.min.js"></script> <!-- Required for ngFabForm -->
 <script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script> <!-- Angular extension for easier form handling -->
