Feature: viewdocent - creationform - NotificationIcon in NavBar angepasst

--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -39,10 +39,15 @@
                 </form>
             </ul>-->
 			<ul class="nav navbar-nav navbar-right ">
-				<li><a class="mtp-icon-link" href="#"><span class="glyphicon glyphicon-log-out mtp-icon"></span></a></li>
+                <li><a class="mtp-icon-link" href="#"><span class="glyphicon glyphicon-log-out mtp-icon"></span></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="li-notification"><a class="mtp-icon-link" href="#"><i class="fa fa-bell-o fa-lg mtp-icon"></i><span class="navbar-new mtp-icon">1</span></a></li>
+                <li>
+                    <a class="mtp-icon-link" href="#">
+                        <i class="fa fa-bell-o fa-lg mtp-icon"></i>
+                        <span class="badge mtp-notification">42</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
