Feature: viewdocent - creationform - eonasdan-datetimepicker entfernt und gegen bootstrap-datetimepicker ausgetauscht - ngFabForm für Formvalidierung integriert und teilweise implementiert - Validierungstexte und -styles angepasst - Logik zu Abhängigkeiten in ANzeige des Forms integriert

--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -8,14 +8,14 @@
     <!-- Loading Bootstrap -->
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" media="screen">
 
-    <!-- Loading bootstrap datetimepicker styles -->
-    <link rel="stylesheet" href="../../node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
-
     <!-- Loading additional styles -->
     <link rel="stylesheet" href="viewdocent.css">
 
 	<!-- Loading Font-Awesome -->
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css" media="screen">
+
+    <!-- Loading ngFabForm styles -->
+    <link rel="stylesheet" href="validation.css">
 </head>
 <body>
 <!-- Navbar -->
@@ -128,11 +128,10 @@
 </div>
 
 <script src="../../node_modules/jquery/dist/jquery.min.js"></script> <!-- Required for nearly every addon -->
-<script src="../../node_modules/moment/min/moment-with-locales.min.js"></script> <!-- Required for bootstrap datetimepicker -->
 <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../../node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="../bower_components/angular-messages/angular-messages.min.js"></script> <!-- Required for ngFabForm -->
+<script src="../bower_components/angular-animate/angular-animate.min.js"></script> <!-- Required for ngFabForm -->
 <script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script> <!-- Angular extension for easier form handling -->
 <script src="./viewdocent.js"></script> <!-- Angular module code -->
 
