--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" media="screen">
 
     <!-- Loading additional styles -->
-    <link rel="stylesheet" href="viewdocent.css">
+    <link rel="stylesheet" href="../css/mtp.css">
 
-	<!-- Loading Font-Awesome -->
+    <!-- Loading Font-Awesome -->
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css" media="screen">
 
     <!-- Loading ngFabForm styles -->
@@ -20,91 +20,82 @@
 <body>
 <!-- Navbar -->
 <nav id="navHead" class="navbar navbar-inverse" style="border-radius: 0">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="MeetTheProf Logo"></a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <!--<ul class="nav navbar-nav">
-                <form class="navbar navbar-form shaped" style="width: 95%">
-                    <div class="input-group responsive">
-                        <input class="form-control form" placeholder="Suche" type="search" style="border-radius: 6px">
-                        <span class="form-control-feedback fui-search" style="top: 0;"></span>
-                    </div>
-                </form>
-            </ul>-->
-			<ul class="nav navbar-nav navbar-right ">
-                <li><a class="mtp-icon-link" href="#"><span class="glyphicon glyphicon-log-out mtp-icon"></span></a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a class="mtp-icon-link" href="#">
-                        <i class="fa fa-bell-o fa-lg mtp-icon"></i>
-                        <span class="badge mtp-notification">42</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
+    <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="MeetTheProf Logo"></a>
+    <div class="collapse navbar-collapse" id="myNavbar">
+        <!--<ul class="nav navbar-nav">
+            <form class="navbar navbar-form shaped" style="width: 95%">
+                <div class="input-group responsive">
+                    <input class="form-control form" placeholder="Suche" type="search" style="border-radius: 6px">
+                    <span class="form-control-feedback fui-search" style="top: 0;"></span>
+                </div>
+            </form>
+        </ul>-->
+        <ul class="nav navbar-nav navbar-right ">
+            <li><a class="mtp-icon-link" href="#"><span class="glyphicon glyphicon-log-out mtp-icon"></span></a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a class="mtp-icon-link" href="#">
+                    <i class="fa fa-bell-o fa-lg mtp-icon"></i>
+                    <span class="badge mtp-notification">42</span>
+                </a>
+            </li>
+        </ul>
     </div>
 </nav>
 
-
-<div id="meetingContainer" class="container" ng-controller="MeetingsController">
+<div id="meetingContainer" class="container container-if-fixed-footer" ng-controller="MeetingsController">
     <div id="meetingPanelGroup" class="panel-group">
         <ng-include src="'../templates/templ_meetingpanel.html'"></ng-include>
     </div>
 </div>
 
 <!-- Button for creating a meeting -->
-<button id="btnAddMeeting" class="btn btn-add btn-round mtp-icon-link" data-toggle="modal" data-target="#creationForm" ng-controller="MeetingsController">
+<button id="btnAddMeeting" class="btn btn-add btn-round mtp-icon-link" data-toggle="modal" data-target="#creationForm"
+        ng-controller="MeetingsController">
     <i class="fa fa-calendar-plus-o fa-lg mtp-btn-icon"></i>
 </button>
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom" style="border-radius: 0">
     <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-1">
-                    <div class="row">
-                        <div class="panel panel-key" style="background-color: #3498DB">
-                        </div>
-                    </div>
-                    <div class="row row-key" style="color: white;">
-                        niemand angemeldet
+        <div class="row">
+            <div class="col-lg-1">
+                <div class="row">
+                    <div class="panel panel-key" style="background-color: #3498DB">
                     </div>
                 </div>
-                <div class="col-lg-1">
-                    <div class="row">
-                        <div class="panel panel-key" style="background-color: #2ECC71;">
-                        </div>
-                    </div>
-                    <div class="row row-key" style="color: white;">
-                        Teilnehmer angemeldet
-                    </div>
-                </div>
-                <div class="col-lg-1">
-                    <div class="row">
-                        <div class="panel panel-key" style="background-color: #E74C3C;">
-                        </div>
-                    </div>
-                    <div class="row row-key" style="color: white;">
-                        abgesagt
-                    </div>
-                </div>
-                <div class="col-lg-1">
-                    <div class="row">
-                        <div class="panel panel-key" style="background-color: #95A5A6;">
-                        </div>
-                    </div>
-                    <div class="row row-key" style="color: white;">
-                        vergangen
-                    </div>
+                <div class="row row-key" style="color: white;">
+                    niemand angemeldet
                 </div>
             </div>
+            <div class="col-lg-1">
+                <div class="row">
+                    <div class="panel panel-key" style="background-color: #2ECC71;">
+                    </div>
+                </div>
+                <div class="row row-key" style="color: white;">
+                    Teilnehmer angemeldet
+                </div>
+            </div>
+            <div class="col-lg-1">
+                <div class="row">
+                    <div class="panel panel-key" style="background-color: #E74C3C;">
+                    </div>
+                </div>
+                <div class="row row-key" style="color: white;">
+                    abgesagt
+                </div>
+            </div>
+            <div class="col-lg-1">
+                <div class="row">
+                    <div class="panel panel-key" style="background-color: #95A5A6;">
+                    </div>
+                </div>
+                <div class="row row-key" style="color: white;">
+                    vergangen
+                </div>
+            </div>
+        </div>
     </div>
 </nav>
 
@@ -123,7 +114,8 @@
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="../bower_components/angular-messages/angular-messages.min.js"></script> <!-- Required for ngFabForm -->
 <script src="../bower_components/angular-animate/angular-animate.min.js"></script> <!-- Required for ngFabForm -->
-<script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script> <!-- Angular extension for easier form handling -->
+<script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script>
+<!-- Angular extension for easier form handling -->
 <script src="./viewdocent.js"></script> <!-- Angular module code -->
 
 </body>
