feature_viewdocent_forms: - Icons in den Panels zu Buttons umgeformt und in Collapse-Bereich eingefügt - Form zum Absagen von Meetings auf X in Collapse gelegt

--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -109,6 +109,10 @@
     <ng-include src="'../templates/form_meetingedit.html'"></ng-include>
 </div>
 
+<div id="cancelForm" class="modal fade" ng-controller="MeetingsController">
+    <ng-include src="'../templates/form_meetingcancel.html'"></ng-include>
+</div>
+
 <script src="../../node_modules/jquery/dist/jquery.min.js"></script> <!-- Required for nearly every addon -->
 <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../bower_components/angular/angular.min.js"></script>
