--- a/app/view-docent/validation.html
+++ b/app/view-docent/validation.html
@@ -14,13 +14,13 @@
         <li ng-message="datetime">Bitte gültiges Datum und gültige Zeit eingeben</li>
         <li ng-message="datetime-local">Bitte gültiges Datum und gültige Zeit eingeben</li>
         <li ng-message="number">Dieses Feld muss numerisch sein</li>
-        <li ng-message="color">Please enter a valid color</li>
-        <li ng-message="range">Please enter a valid range</li>
-        <li ng-message="month">Please enter a valid month</li>
-        <li ng-message="url">Please enter a valid URL</li>
-        <li ng-message="file">Invalid file</li>
+        <li ng-message="color">Bitte gültige Farbe eingeben</li>
+        <li ng-message="range">Bitte gültige Spanne eingeben</li>
+        <li ng-message="month">Bitte gültigen Monat eingeben</li>
+        <li ng-message="url">Bitte gültige URL eingeben</li>
+        <li ng-message="file">Ungültige Datei</li>
         <li ng-message="minlength">Bitte mindestens {{ attrs.minlength }} Zeichen eingeben</li>
-        <li ng-message="maxlength">Bitte weniger als {{ attrs.maxlength }} Zeichen eingeben</li>
+        <li ng-message="maxlength">Bitte höchstens {{ attrs.maxlength }} Zeichen eingeben</li>
         <li ng-message="ngFabMatch">Das {{ attrs.type ==='password'? 'passwords' : 'values' }} muss übereinstimmen</li>
         <li ng-if="attrs.type == 'time' "
             ng-message="min">Die eingegebene Zeit muss nach {{ attrs.min |date: 'HH:MM' }} liegen
@@ -35,10 +35,10 @@
             ng-if="attrs.type == 'date' ">Das eingegebene Datum muss vor {{attrs.max |date: 'dd.MM.yyyy'}} liegen
         </li>
         <li ng-message="min"
-            ng-if="attrs.type === 'number' ">Die eingegebene Nummer muss mindestens {{attrs.min}} sein
+            ng-if="attrs.type === 'number' ">Die eingegebene Zahl muss mindestens {{attrs.min}} sein
           </li>
         <li ng-message="max"
-            ng-if="attrs.type === 'number' ">Die eingegebene NUmmer darf maximal {{attrs.max}} sein
+            ng-if="attrs.type === 'number' ">Die eingegebene Zahl darf maximal {{attrs.max}} sein
         </li>
     </ul>
     <div class="validation-success"
