--- a/app/view-student/viewstudent.html
+++ b/app/view-student/viewstudent.html
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="row row-key" style="color: white;">
-                    Anmeldung nicht möglich/vergangen
+                    Anmeldung nicht möglich/abgesagt
                 </div>
             </div>
             <div class="col-lg-1">
