--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -102,6 +102,7 @@
 <script src="../bower_components/angular-messages/angular-messages.min.js"></script> <!-- Required for ngFabForm -->
 <script src="../bower_components/angular-animate/angular-animate.min.js"></script> <!-- Required for ngFabForm -->
 <script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script>
+<script src="../bower_components/ngstorage/ngStorage.min.js"></script>
 <!-- Angular extension for easier form handling -->
 <script src="./viewdocent.js"></script> <!-- Angular module code -->
 
