--- a/app/view-login/viewlogin.html
+++ b/app/view-login/viewlogin.html
@@ -13,6 +13,7 @@
 
     <!-- Loading Font-Awesome -->
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css" media="screen">
+
 </head>
 <body>
 <!-- Navbar -->
@@ -35,6 +36,7 @@
 <script src="../bower_components/angular-messages/angular-messages.min.js"></script> <!-- Required for ngFabForm -->
 <script src="../bower_components/angular-animate/angular-animate.min.js"></script> <!-- Required for ngFabForm -->
 <script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script>
+<script src="../bower_components/ngstorage/ngStorage.min.js"></script>
 <!-- Angular extension for easier form handling -->
 <script src="./viewlogin.js"></script> <!-- Angular module code -->
 
