--- a/app/view-login/viewlogin.html
+++ b/app/view-login/viewlogin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" ng-app="MeetTheProf.viewLogin">
+<html lang="de" ng-app="MeetTheProf.viewLogin">Klau
 <head>
     <meta charset="utf-8">
     <title>MeetTheProf - Anmeldung</title>
