--- a/app/view-student/viewstudent.html
+++ b/app/view-student/viewstudent.html
@@ -157,6 +157,7 @@
 <script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script>-->
 <!-- Angular extension for easier form handling -->
 <script src="./viewstudent.js"></script> <!-- Angular module code -->
+<script src="../bower_components/ngstorage/ngStorage.min.js"></script>
 
 </body>
 </html>
