--- a/app/view-student/viewstudent.html
+++ b/app/view-student/viewstudent.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css" media="screen">
 
     <!-- Loading ngFabForm styles -->
-    <!-- <link rel="stylesheet" href="validation.css"> -->
+    <link rel="stylesheet" href="../css/validation.css">
 </head>
 <body>
 <!-- Navbar -->
@@ -152,7 +152,7 @@
 <script src="../../node_modules/jquery/dist/jquery.min.js"></script> <!-- Required for nearly every addon -->
 <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../bower_components/angular/angular.min.js"></script>
-<!--<script src="../bower_components/angular-messages/angular-messages.min.js"></script>
+<script src="../bower_components/angular-messages/angular-messages.min.js"></script>
 <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="../bower_components/ng-fab-form/dist/ng-fab-form.min.js"></script>-->
 <!-- Angular extension for easier form handling -->
