--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -43,7 +43,7 @@
     <div id="meetingPanelGroup" class="panel-group">
         <ng-include src="'../templates/templ_meetingpaneladmin.html'"></ng-include>
     </div>
-    <div class="well well-lg well-warn" ng-show="!hasMeetings()">
+    <div class="well well-lg well-warn" ng-show="isDataLoaded && !hasMeetings()">
         <div class="row">
             <div class="col-lg-1">
                 <i class="fa fa-info-circle mtp-icon mtp-icon-xl"></i>
