master: - Aufflimmern der Warnungsmeldungen durch Hinzufügen der Klasse ng-hide behoben - Meetings ohne freie Slots werden jetzt rot angezeigt - Anzeige und Steuerung für Unterscheidung zwischen Meeting mit bzw. ohne Slots in Dozentensuche implementiert - Panelfarben werden jetzt korrekt zugeteilt (außer last_enrollment) - Anmeldung an Meetings ohne Slots (max_participants) jetzt möglich

--- a/app/view-docent/viewdocent.html
+++ b/app/view-docent/viewdocent.html
@@ -44,7 +44,7 @@
     <div id="meetingPanelGroup" class="panel-group">
         <ng-include src="'../templates/templ_meetingpaneladmin.html'"></ng-include>
     </div>
-    <div class="well well-lg well-warn" ng-show="isDataLoaded && !hasMeetings()">
+    <div class="well well-lg well-warn ng-hide" ng-show="isDataLoaded && !hasMeetings()">
         <div class="row">
             <div class="col-lg-1">
                 <i class="fa fa-info-circle mtp-icon mtp-icon-xl"></i>
